# mockway_robotics

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  TODO.md  setup_ubuntu.sh  setup_win_tools.bat
config/: dynamics_test.yaml
dmmotor_hardware_interface/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  dmmotor_hardware_interface.xml  package.xml
dmmotor_hardware_interface/config/: hardware_config_example.yaml
dmmotor_hardware_interface/include/dmmotor_hardware_interface/: dmmotor_hardware_interface.hpp
dmmotor_hardware_interface/src/: dmmotor_hardware_interface.cpp
doc/: BOM.md  组装指南.html  组装指南.md  配置Moveit.md
doc/tools/: generate_joint_direction_images.py
jellycad_src/: base.lua  camera.lua  combine.lua  config.lua  elbow.lua  flank.lua  lid.lua  linkage.lua  shell.lua  tail.lua
mockway_bringup/launch/: bringup.launch.py  mockway.launch.py
mockway_description/: CMakeLists.txt  package.xml
mockway_description/meshes/: base_link.stl  link1.stl  link2.stl  link4.stl  link5.stl  link6.stl
mockway_description/urdf/: mockway_description.primitive_collision.urdf  mockway_description.urdf
mockway_lua_moveit/: CMakeLists.txt  README.md  package.xml  robot_skill.md
mockway_lua_moveit/include/mockway_lua_moveit/: http_server.hpp  lua_moveit_node.hpp
mockway_lua_moveit/src/: http_server.cpp  lua_moveit_node.cpp  main.cpp
mockway_lua_moveit/ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
mockway_lua_moveit/ui/public/meshes/: base_link.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae
mockway_lua_moveit/ui/public/urdf/: mockway_description.urdf
mockway_lua_moveit/ui/src/: App.vue
mockway_lua_moveit/ui/src/blockly/: blocks.js  luaGenerator.js  theme.js  toolbox.js
mockway_lua_moveit/ui/src/components/: BlocklyEditor.vue  BottomNav.vue  Dragon3D.vue  DragonCapsule.vue  GaugeRow.vue  LuaEditor.vue  ManualControl.vue  OrbitalData.vue  SpeedGauge.vue  StatusPanel.vue  SystemSettings.vue
mockway_lua_moveit/ui/src/composables/: useRobotSSE.js
mockway_moveit_servo/: CMakeLists.txt  package.xml
mockway_moveit_servo/config/: gz_ros2_control.yaml  servo_config.yaml
mockway_moveit_servo/launch/: aruco_servo_sim.launch.py  aruco_tracking_sim.launch.py  servo_with_moveit.launch.py
mockway_moveit_servo/scripts/: aruco_servo_follower.py  aruco_tracker.py  keyboard_joint_jog.py  keyboard_pose.py  keyboard_servo.py
mockway_moveit_servo/urdf/: mockway_gazebo.urdf.xacro
mockway_moveit_servo/worlds/: aruco_tracking.sdf
moveit_mockway_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_mockway_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mockway_description.ros2_control.xacro  mockway_description.srdf  mockway_description.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
moveit_mockway_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
tools/: fix_sh_lf.ps1  gen_macos_collision_urdf.py  launch_moveit_demo.bat  launch_moveit_demo_mac.sh  setup_mac.sh  setup_moveit_mac.sh  setup_moveit_ubuntu.sh  setup_win.bat  setup_wsl_moveit.bat  setup_wsl_moveit.ps1
tools/dynamics_test/: README.md  config_loader.py  dynamics_test.yaml  inverse_dynamics_test.py  open_env_shell.bat  realtime_torque_compensation.py  requirements.txt  setup_win.bat
tools/motor_gui/: README.md  dm_motor_driver.py  motor_gui.py
tools/path_teaching/: .runtime_path_teaching.yaml  path_homing.py  path_interpolation.py  path_teaching.yaml  path_teaching_gui.py  requirements.txt
tools/wsl/: attach_usb_can.bat  attach_usb_can.ps1  fix_wsl_hypervisor.bat  fix_wsl_hypervisor.ps1  install_all_deps.bat  launch_moveit_demo.bat  launch_moveit_demo.sh  mockway_wsl_shell.bat  setup_moveit_jazzy.sh  usb_serial_check.sh
